Fix more scrollbar issues

--- a/src/components/OutputPane/OutputPane.scss
+++ b/src/components/OutputPane/OutputPane.scss
@@ -16,6 +16,7 @@
     .ln0,
     .ln1 {
 
+      max-width: 100%;
       min-height: 1.25rem;
     }
 
