--- a/src/textarea.scss
+++ b/src/textarea.scss
@@ -1,7 +1,7 @@
 .textarea {
 
   box-sizing: border-box;
-  padding: 0.5rem;
+  padding: 0.5rem 0.5rem 0;
   min-width: 0;
   min-height: 0;
   overflow: hidden;
